# innowise_laboratory_test

./: .gitignore
lecture_1/my_project/: main.py  pyproject.toml
lecture_2/: mini_profile_generator.py
lecture_5/project/: pyproject.toml
lecture_5/project/app/: main.py
lecture_5/project/app/custom_exceptions/: exception_handlers.py  exceptions.py
lecture_5/project/app/db/: books.db  database.py
lecture_5/project/app/models/: book.py
lecture_5/project/app/repositories/: book_repository.py  sqlalchemy_book_repository.py
lecture_5/project/app/routers/: book.py
lecture_5/project/app/schemas/: book.py
